# audo

./: .gitignore  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20251027174120_base_migration.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: test.rs
src-tauri/src/audio_lib/: chapters.rs  cover.rs  init.rs  metadata.rs  mod.rs  player.rs  state.rs
src-tauri/src/audio_lib/controls/: pause.rs  play.rs
src-tauri/src/audio_player/: player.rs
src-tauri/src/book_managers/: import_book.rs  mod.rs
src-tauri/src/book_managers/currently_listening/: mod.rs
src-tauri/src/book_managers/progress/: start.rs
src-tauri/src/commands/: books.rs  mod.rs
src-tauri/src/commands/playback/: mod.rs  play.rs  player.rs
src-tauri/src/database/sqlite/: db.rs  mod.rs  run_migrations.rs
src-tauri/src/database/sqlite/controllers/: get_library.rs  mod.rs
src-tauri/src/database/sqlite/controllers/books/: current.rs
src-tauri/src/database/sqlite/entity/: audiobook.rs  current_book.rs  mod.rs  prelude.rs  progress.rs
src-tauri/src/database/sqlite/migrations/src/: lib.rs  m20220101_000001_create_table.rs  m20250430_183042_update_books_table.rs  m20250502_045727_metadata_narrator.rs  m20250502_045915_metadata_series.rs  m20250502_050036_metadata_description.rs  m20250513_180706_file_location.rs  (+2 more)
src-tauri/src/db/: db.rs  mod.rs
src-tauri/src/db/handlers/: fetch.rs
src-tauri/src/structs/: book.rs  mod.rs
src-tauri/src/utils/: extract_metadata.rs  mod.rs
(+21 files in other folders)
