[package]
name = "audo"
version = "0.1.0"
description = "Audo is a all-in-one Audiobook player"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-next = "7.1.0"
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
sea-orm-migration = { version = "1.1" }
migration = { path = "./src/database/sqlite/migrations" }
tracing = "0.1.41"
